# eduhu-assistant

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  Dockerfile  QA-CHECKLISTE.md  README.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  render.yaml  tsconfig.tsbuildinfo  wrangler.toml
backend/: .env.example  Dockerfile  alembic.ini  benchmark_report_20260214_141241.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_generated_materials.py  0003_coolify_migration.py  0004_token_usage.py  0005_auth_system.py  0006_didacta_mode.py  0006_set_admin_roles.py  0007_didacta_mode.py  0007_onboarding_completed.py  0008_demo_surveys.py  0009_onboarding_completed.py
backend/app/: auth_utils.py  config.py  constants.py  db.py  deps.py  docx_generator.py  email_service.py  exceptions.py  h5p_generator.py  ingestion.py  main.py  memory_cleanup.py  migrations.py  models.py  seed_knowledge.py  token_tracking.py
backend/app/agents/: base.py  curriculum_agent.py  differenzierung_agent.py  escape_room_agent.py  gespraechssimulation_agent.py  h5p_agent.py  hilfekarten_agent.py  image_agent.py  klausur_agent.py  knowledge.py  lernsituation_agent.py  lernspiel_agent.py  llm.py  main_agent.py  tts_agent.py  (+13 more)
backend/eduhu_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: TASK_FIX_TESTS.md  benchmarks.py  benchmarks_v2.py  conftest.py  test_agents.py  test_integration.py  test_security.py  test_unit.py
(+181 files in other folders)
